fix: languages img spacing

--- a/style.css
+++ b/style.css
@@ -64,7 +64,9 @@ body {
 }
 
 .languages ul {
-  display: inline-flex;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .languages ul li {
